src/objects/CommDefine__c.object
<CustomObject>
    <fields>
        <fullName>CashRegisterSwitchCode__c</fullName>
        <defaultValue>&quot;4&quot;</defaultValue>
        <description>レジカード画面遷移制御コー3</description>
        <inlineHelpText>レジカード画面遷移制御コード
コード：1 B5サイズ、アンケート質問あり
コード：2 B5サイズ、アンケート質問なし
コード：3 B5サイズ、アンケート質問なし、プレ印刷用紙文字列のみ
コード：4 B5サイズ、客室係記入ページあり
コード：5 B5サイズ、代表者のみ、勤務先情報あり
コード：6 A5サイズ、代表者のみ、国籍情報あり
コード：7 A5サイズ（横）、代表者のみ、国籍情報あり</inlineHelpText>
        <label>レジカードコード</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterGroupName__c</fullName>
        <inlineHelpText>機能の処理結果を通知用チャターグループ名を定義する
書式：1:グループ名A,グループ名B;2:グループ名C.グループ名D
1→2way連携結果通知
2→車ナンバー通知
3→勤怠修正申請
4→PCA/FREEE/勘定奉行連携出力グループ名
5→POS取込通知
6→IOT通知
7→予定表PDF通知
8→予約チェックアウト通知
9→ラックレートTier変更通知
10→勤怠チェック結果通知
11→入金消込チェック通知
12→予約チェックイン通知</inlineHelpText>
        <label>チャターグループ名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterGroupSimpleMsgFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>「車ナンバー通知」「IOT通知」メッセージは簡易方式でチャターグループへポストするフラグ
TRUE：簡易メッセージ
FALSE:通常メッセージ（デフォルト値)</inlineHelpText>
        <label>チャターポスト簡易メッセージフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckInDayUserConfigFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>画面の指定日を指定した後、ルームインジケータや予定表、タイムテーブルを横断的に見る時にその都度同じ指定日を設定、データを表示される
TRUE: 機能有効
FALSE: 機能無効（デフォルト値）</inlineHelpText>
        <label>指定日横断有効フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CiMessageToChatterFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>チェックインの通知メッセージをチャターへポストする、しないフラグ
TRUE:ポストする
FALSE:ポストしない（デフォルト値）</inlineHelpText>
        <label>チェックイン通知チャターへポストフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CiSpeechAlertFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>チェックイン音声通知機能有効するがどうか制御フラグ
TRUE:音声通知する
FALSE:音声通知しない（デフォルト値）</inlineHelpText>
        <label>チェックイン音声通知機能</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClearDataCreateOnCheckoutDay__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>清掃指示データの作成対象日付の制御フラグ
TRUE:チェックアウトタイミングの日付の清掃指示データを作成する
FALSE:チェックアウトすると、チェックアウト日の清掃指示データを作成する（デフォルト値）</inlineHelpText>
        <label>清掃指示データの対象日付制御区分</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoAndShowAccountWin__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計画面のチェックアウトボタンをクリック後、会計書出力ページを自動起動する・しないフラグ
TRUE:チェックアウトボタンをクリック後、該当予約情報をチェックアウトして、会計書出力ページを起動する
FALSE:チェックアウトボタンをクリック後、該当予約情報をチェックアウトのみ、会計書出力ページを起動しない</inlineHelpText>
        <label>チェックアウト+会計書作成フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoMessageToChatterFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>チェックアウトの通知メッセージをチャターへポストする、しないフラグ
TRUE:ポストする
FALSE:ポストしない（デフォルト値）</inlineHelpText>
        <label>チェックアウト通知チャターへポストフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoSpeechAlertFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>チェックアウト音声通知機能有効するがどうか制御フラグ
TRUE:音声通知する
FALSE:音声通知しない（デフォルト値）</inlineHelpText>
        <label>チェックアウト音声通知機能</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ColorRSRoomAssigned__c</fullName>
        <inlineHelpText>ルームインジケータ画面のステータス「割当済」の色設定用、デフォルト値：#00ccff 
設定例：royalblue
店舗情報なしまたは店舗情報項目「色_ルームインジケータ_割当済」を登録されない場合、該当項目の設定値で画面に表示する</inlineHelpText>
        <label>色_ルームインジケータ_割当済</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColorRSRoomBad__c</fullName>
        <inlineHelpText>ルームインジケータ画面のステータス「故障」の色設定用、デフォルト値：#2554C7 
設定例：gray
店舗情報なしまたは店舗情報項目「色_ルームインジケータ_故障」を登録されない場合、該当項目の設定値で画面に表示する</inlineHelpText>
        <label>色_ルームインジケータ_故障</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColorRSRoomChkOutDay__c</fullName>
        <inlineHelpText>ルームインジケータ画面のステータス「出発予定」の色設定用、デフォルト値：#FDD017 
設定例：gold
店舗情報なしまたは店舗情報項目「色_ルームインジケータ_出発予定」を登録されない場合、該当項目の設定値で画面に表示する</inlineHelpText>
        <label>色_ルームインジケータ_出発予定</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColorRSRoomChkOut__c</fullName>
        <inlineHelpText>ルームインジケータ画面のステータス「出発」の色設定用、デフォルト値：#F75D59 
設定例：coral
店舗情報なしまたは店舗情報項目「色_ルームインジケータ_出発」を登録されない場合、該当項目の設定値で画面に表示する</inlineHelpText>
        <label>色_ルームインジケータ_出発</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColorRSRoomNoClean__c</fullName>
        <inlineHelpText>ルームインジケータ画面のステータス「未清掃」の色設定用、デフォルト値：#B0C4DE 
設定例：lightsteelblue
店舗情報なしまたは店舗情報項目「色_ルームインジケータ_未清掃」を登録されない場合、該当項目の設定値で画面に表示する</inlineHelpText>
        <label>色_ルームインジケータ_未清掃</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColorRSRoomOut__c</fullName>
        <inlineHelpText>ルームインジケータ画面のステータス「外出」の色設定用、デフォルト値：#CCCCCC 
設定例：Silver
店舗情報なしまたは店舗情報項目「色_ルームインジケータ_外出」を登録されない場合、該当項目の設定値で画面に表示する</inlineHelpText>
        <label>色_ルームインジケータ_外出</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColorRSRoomStay__c</fullName>
        <inlineHelpText>ルームインジケータ画面のステータス「滞在」の色設定用、デフォルト値：#90EE90 
設定例：limegreen
店舗情報なしまたは店舗情報項目「色_ルームインジケータ_滞在」を登録されない場合、該当項目の設定値で画面に表示する</inlineHelpText>
        <label>色_ルームインジケータ_滞在</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactSearchFields__c</fullName>
        <inlineHelpText>新規予約画面上でお客様検索をした後に表示される候補項目の定義
お客様の項目のみ定義可能（カンマ「,」で複数API項目を定義可能）
例：API1,API2,API3
注：データ型が「日付、日付/時間、テキストエリア、ロングテキスト」の項目を定義不可</inlineHelpText>
        <label>客様検索機能のカスタマイズ表示項目</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactUsageCountDiv__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>お客様利用回数集計方式区分
1：予約データ件数で集計（Defautl値）
2：実際の来店回数で集計（N部屋N泊連泊でも、１回で集計する）</inlineHelpText>
        <label>お客様利用回数集計区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomTimeReport__c</fullName>
        <defaultValue>&quot;$$0040 カスタム時間割&quot;</defaultValue>
        <label>レポート_カスタム時間割</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerRankKey__c</fullName>
        <label>レポート_RFMランク別集計レポート名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DayUseDefaultStayHours__c</fullName>
        <defaultValue>2</defaultValue>
        <inlineHelpText>日帰お客様はデフォルト滞在時間数を定義する、時間単位</inlineHelpText>
        <label>到着日と出発日同一日デフォルト滞在時間数</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DayUseEntryTime__c</fullName>
        <defaultValue>&quot;12:00&quot;</defaultValue>
        <inlineHelpText>書式：[HH:MM]
中継アプリから日帰り予約を取込する場合、到着時刻と出発時刻を未設定する場合
到着時刻は　該当設定値で設定する、
出発時刻は　到着時刻 + 2時間で設定する</inlineHelpText>
        <label>到着日と出発日同一日予約到着時刻</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetailsInputDefaultLines__c</fullName>
        <defaultValue>&quot;5&quot;</defaultValue>
        <inlineHelpText>見積明細、会計明細のデフォルト行数
&quot;5&quot;（デフォルト値）</inlineHelpText>
        <label>明細デフォルト行数</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnglishTaxLabel__c</fullName>
        <defaultValue>&quot;Sales Tax&amp;Hotel Tax&quot;</defaultValue>
        <inlineHelpText>見積書、会計書、請求書の内消費税の英語表示文字</inlineHelpText>
        <label>内消費税英語表示文言</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstIsCanEditFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>複数見積機能、既存見積を修正後、修正した内容は既存見積明細に反映する・しないフラグ
TRUE：反映しない
FALSE:反映する（デフォルト値）</inlineHelpText>
        <label>複数見積の既存見積へ反映制御フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExchangeRateApiRateKbn__c</fullName>
        <defaultValue>&quot;2&quot;</defaultValue>
        <inlineHelpText>為替レート取得APIのレート価額設定区分：
1:買いレート
2:中点 (Default値）
3:売りレート</inlineHelpText>
        <label>為替レート取得バッチレート設定区分</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExchangeRateQueryDiv__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>JPY通貨以外からJPY通貨の請求書を作成する場合、為替レート取得区分を設定する
&quot;1&quot;: 請求書ボタンクリックの会計の「売上計上日」にて、該日の為替レートで外貨から日本円の請求額を計算する（Default値）
&quot;2&quot;：各会計の「売上計上日」にて、為替レートを別々取得して、各売上計上日の請求額を計算する</inlineHelpText>
        <label>為替レート取得区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExchangeRateStartHours__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>為替レート取得のスケジュール起動時間（HH）を設定する
設定範囲（０〜２３）
例：朝９時の為替レートを取得したい場合、該当数値は９に設定する</inlineHelpText>
        <label>為替レート取得バッチ起動時間（HH）</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExchangeTaxRate__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>日本円以外の通貨から日本円に金額変更する場合、該当消費税率で消費税を計算する</inlineHelpText>
        <label>日本消費税率</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FacilityCode__c</fullName>
        <defaultValue>&apos;1&apos;</defaultValue>
        <description>コード：１  反転明細、A4サイズ、領収書なし
コード：２  反転明細、A4サイズ、領収書あり
コード：３  デザイン性のある明細、B5サイズ、領収書あり
コード：４  デザイン性のある明細、A4サイズ、領収書あり
コード：６  デザイン性のある明細、B5サイズ、領収書なし
コード：７  デザイン性のある明細、A4サイズ、領収書なし
コード：８  プレ印刷用紙文字列のみ、B5サイズ、領収書あり、文字色一律変更可能
コード：９　 プレ印刷用紙文字列のみ、A4サイズ、領収書あり、文字色一律変更可能
コード：１０ プレ印刷用紙文字列のみ、B5サイズ、領収書なし、文字色一律変更可能
コード：１１ プレ印刷用紙文字列のみ、A4サイズ、領収書なし、文字色一律変更可能
コード：１２ 未使用
コード：１３ デザイン性のある明細、B5サイズ、領収書あり、メディア種別をすべて明細に表示
コード：１４ デザイン性のある明細、A4サイズ、領収書あり、メディア種別をすべて明細に表示
コード：２３ デザイン性のある明細、B5サイズ、領収書あり、メディア種別をすべて明細に表示
コード：２４ デザイン性のある明細、A4サイズ、領収書あり、メディア種別をすべて明細に表示
コード：３３ デザイン性のある明細、B5サイズ、領収書あり、メディア種別をすべて明細に表示「新会計対応」
コード：３４ デザイン性のある明細、A4サイズ、領収書あり、メディア種別をすべて明細に表示「新会計対応」
コード：３５ デザイン性のある明細、B5サイズ、領収書なし、メディア種別をすべて明細に表示「新会計対応」
コード：３６ デザイン性のある明細、A4サイズ、領収書なし、メディア種別をすべて明細に表示「新会計対応」</description>
        <inlineHelpText>施設の会計書出力レイアウト種類を判別用区分コード
コード詳細意味は項目説明内容を参照ください</inlineHelpText>
        <label>施設コード</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityEmail__c</fullName>
        <inlineHelpText>会計書に、施設組織情報表示内容（Email)設定用</inlineHelpText>
        <label>施設EMAIL</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FacilityName__c</fullName>
        <inlineHelpText>「未使用」</inlineHelpText>
        <label>施設名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityPayee1__c</fullName>
        <inlineHelpText>請求書の「お振込先」の振込１番目の表示情報を設定する、最大３行目のお振込先情報を定義可能 
設定例：○○銀行△△支店　普通 1234567</inlineHelpText>
        <label>施設振込先１</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityPayee2__c</fullName>
        <inlineHelpText>請求書の「お振込先」の振込２番目の表示情報を設定する、最大３行目のお振込先情報を定義可能 
設定例：○○銀行△△支店　普通 1234567</inlineHelpText>
        <label>施設振込先２</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityPayee3__c</fullName>
        <inlineHelpText>請求書の「お振込先」の振込３番目の表示情報を設定する、最大３行目のお振込先情報を定義可能
設定例：○○銀行△△支店　普通 1234567</inlineHelpText>
        <label>施設振込先３</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityPayeeAcount__c</fullName>
        <inlineHelpText>請求書の「口座名義人」の表示情報を設定する</inlineHelpText>
        <label>施設振込先口座</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityWebsite__c</fullName>
        <inlineHelpText>会計書に、施設組織情報表示内容（URL)設定用</inlineHelpText>
        <label>施設URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GuestRooms__c</fullName>
        <defaultValue>20</defaultValue>
        <inlineHelpText>施設最大客室数定義する</inlineHelpText>
        <label>施設客室数</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InventorySaveFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>理論在庫と実際在庫との連動処理要／不要切り替えフラグ
TRUE:  連動が不要（棚卸画面、在庫数を入力すると、実際在庫へ設定する、リクエストバッチ実施不要）
FALSE: 連動が必要（棚卸画面、在庫数を入力すると、実際在庫へ設定する、リクエストバッチ実施要）(デフォルト値)</inlineHelpText>
        <label>棚卸し機能を使用する・使用しないフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IotMessageCustomDef__c</fullName>
        <defaultValue>&quot;WaterQuqntity:Warning Message @location 水量 @valueリットル;WaterTemperature:Warning Message @location 水温 @value度;Persons:Warning Message @location 人数 @value人&quot;</defaultValue>
        <inlineHelpText>Iotのワーニングメッセージの文言定義
書式：メッセージ種別:X@locationX@valueX
説明：
メッセージ種別:水量[WaterQuqntity]、水温[WaterTemperature]、人数[Persons]
X:カスタマイズ文言
@location:検知の場所(省略可)
@value:検知値(省略可)</inlineHelpText>
        <label>IOT機能通知文言定義</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IotMessageJoinFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>IOT機能通知文言ジョイン機能文言有効がどうか制御フラグ
TRUE:通知文言ジョインする（デフォルト値）
FALSE：通知文言ジョインしない</inlineHelpText>
        <label>IOT機能通知文言ジョイン機能</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IotMessageToChatterFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>IOTの通知メッセージをチャターへポストする、しない制御フラグ
TRUE:ポストする（デフォルト値）
FALSE:ポストしない</inlineHelpText>
        <label>IOT機能通知チャターへポスト制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IotNormalStatusAlertFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>IOT機能正常状態（Normal）を受信のとき、音通知、チャターへポストをする・しない制御フラグ
TRUE：音通知、チャターへポストをする
FALSE：音通知、チャターへポストをしない（デフォルト値）</inlineHelpText>
        <label>IOT機能正常値の通知機能制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IotSpeechAlertFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>IOT音声通知機能有効するがどうか制御フラグ
TRUE:音声通知する（デフォルト値）
FALSE:音声通知しない</inlineHelpText>
        <label>IOT音声通知機能</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IotStatusManagerFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>IOTの状態管理機能が有効、無効を制御（IOTクライアント側はVer.インターフェイス4対応済後、該当パラメータを「ON」する可能）
TRUE：マップ画面を初期表示のとき、IOT既存の最新状態情報を画面に表示する
FALSE:マップ画面を初期表示のとき、IOT既存の最新状態情報を画面に表示しない</inlineHelpText>
        <label>IOT機能状態管理機能</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNoCleanKeepFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>未清掃状態は清掃終了の操作をかけるまで表示する・しないフラグ
TRUE:清掃終了まで未清掃状態を表示する
FALSE:日毎に清掃状態を切り替えする（デフォルト値）</inlineHelpText>
        <label>未清掃保持フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemChangeHistoryAutoCreateFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>項目変更履歴情報（現金合わせ変更履歴、会計編集情報変更履歴）自動作成する・しない切替フラグ
TRUE：自動作成する（デフォルト値）
FALSE:自動作成しない</inlineHelpText>
        <label>項目変更履歴自動作成フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadBillStartWindowUIFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ご予約の請求書ボタンを押下して、会計編集画面の請求書ボタンで起動されたウインドウUIと同じする・しない切り替えフラグ
TRUE：ご予約の請求書ボタンを押下して、会計編集画面の請求書ボタンで起動されたウインドウUIと同じ
FALSE：ウインドウを表示されない（カスタムメタデータ型の定型文を設定される場合、起動ウインドウあり）</inlineHelpText>
        <label>請求書作成指示UI統一フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadIsHiruKey1__c</fullName>
        <inlineHelpText>ご予約昼の太陽マークが表示する時刻リストを定義する、ご予約の到着時刻は該当リストに含まれるの日帰りのご予約に昼の太陽マークが表示する 
書式：「&quot;時:分&quot;」複数時刻をカマで連結を複数定義できる 
例：「&quot;11:00&quot;,&quot;12:00&quot;,&quot;13:00&quot;,&quot;14:00&quot;,&quot;15:00&quot;」</inlineHelpText>
        <label>ご予約昼の太陽マークが表示する時刻定義1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadIsHiruKey__c</fullName>
        <defaultValue>&quot;\&quot;15:00\&quot;,\&quot;14:30\&quot;,\&quot;14:00\&quot;,\&quot;13:30\&quot;,\&quot;13:00\&quot;,\&quot;12:30\&quot;,\&quot;12:00\&quot;,\&quot;11:30\&quot;,\&quot;11:00\&quot;,\&quot;10:30\&quot;,\&quot;10:00\&quot;,\&quot;9:30\&quot;,\&quot;9:30\&quot;,\&quot;9:00\&quot;,\&quot;9:00\&quot;,\&quot;8:30\&quot;,\&quot;8:30\&quot;,\&quot;8:00\&quot;,\&quot;8:00\&quot;&quot;</defaultValue>
        <inlineHelpText>ご予約昼の太陽マークが表示する時刻リストを定義する、ご予約の到着時刻は該当リストに含まれるの日帰りのご予約に昼の太陽マークが表示する
書式：「&quot;時:分&quot;」複数時刻をカマで連結を複数定義できる
例：「&quot;11:00&quot;,&quot;12:00&quot;,&quot;13:00&quot;,&quot;14:00&quot;,&quot;15:00&quot;」</inlineHelpText>
        <label>ご予約昼の太陽マークが表示する時刻定義</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadRefAccountAutoSetupFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ご予約の「請求先」項目値をお客様の取引先で自動設定する・しないフラグ
TRUE:ご予約の「請求先」項目値をお客様の取引先で自動設定する
FALSE:自動設定しない(デフォルト値）</inlineHelpText>
        <label>ご予約の請求先自動設定フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadSplitDivCode__c</fullName>
        <defaultValue>2</defaultValue>
        <inlineHelpText>N roomsのとき、親部屋にあつめるかまたは、分割するかパラメータにて、切り替えられるように対応
1:予約情報は親部屋にあつめる
2:予約情報は分割設定 (Default値）</inlineHelpText>
        <label>親部屋集める/分割するフラグ</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadStayPersonsIsSyncToEstitemFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>予約人数を変更したら予約見積明細の数量を変更する／しない</description>
        <inlineHelpText>予約人数を変更したら予約見積明細の数量を変更する／しない
TRUE:　予約人数を変更したら予約見積明細の数量を変更する
FALSE: 予約人数を変更したら予約見積明細の数量を変更しない（デフォルト値）</inlineHelpText>
        <label>予約人数と予約見積明細の数量連動制御フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MediaTypeSubscriptionIsShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計編集画面の会計支払の予約金表示・非表示に切り替え制御　Default：False
TRUE:会計支払のメディア種別に、「予約金」表示
FALSE:会計支払のメディア種別に、「予約金」非表示</inlineHelpText>
        <label>会計支払メディア種別（予約金）表示・非表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MessageIsRichTextFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>連絡事項は一つ入力項目に変更し、フォントサイズ、色を変更できる機能切替フラグ
TRUE:機能有効
FALSE:機能無効（デフォルト値）</inlineHelpText>
        <label>ルームインジケータ連絡事項がリッチ表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MessageIsShowFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>ルームインジケータ画面に、「連絡事項」セクション表示・非表示制御フラグ
TRUE:表示
FALSE:非表示</inlineHelpText>
        <label>ルームインジケータ連絡事項表示・非表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MessageOldDataIsShow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>連絡事項内容は自動的に去年度の同じ年月（日）の連絡事項を表示制御
TRUE:最新連絡事項が無いと、去年度の連絡事項を表示する 
FALSE:最新連絡事項のみ表示する（デフォルト値）</inlineHelpText>
        <label>連絡事項過去データ表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MessageRows__c</fullName>
        <defaultValue>3</defaultValue>
        <inlineHelpText>連絡事項表示行数設定（1〜6）［Default値：3］</inlineHelpText>
        <label>連絡事項表示行</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MessageShopCodeDivFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>店舗ごとの連絡事項を区別する・しない
TRUE:店舗ごとの連絡事項を区分する
FALSE:全店舗の連絡事項を共有する（デフォルト値）</inlineHelpText>
        <label>店舗ごとの連絡事項</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoCleanKeepDays__c</fullName>
        <defaultValue>15</defaultValue>
        <inlineHelpText>共通定義：「未清掃保持フラグ」がTRUE前提
未清掃状態チェックを実施際に、過去X日間清掃データをチェックの日数を定義する</inlineHelpText>
        <label>未清掃保持チェック日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoShowRequestFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>会計編集画面に、会計明細の合計金額は０円の場合、請求書非表示は自動チェックするがどうか切替フラグ</description>
        <inlineHelpText>会計編集画面に、会計明細の合計金額は０円の場合、請求書非表示を自動チェックされるがどうか切替フラグ
TRUE：自動設定
FALSE:自動設定なし（Default値）</inlineHelpText>
        <label>０円自動非表示設定機能</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptionPlanSetMode__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <inlineHelpText>プラン設定機能、オプション商品設定可否切替フラグ
注：軽減税率機能有効フラグがTRUE設定前提

0:プラン設定画面、オプション商品明細設定機能なし（デフォルト値）
1:プラン設定画面、オプション商品明細設定機能あり</inlineHelpText>
        <label>プランオプション商品フラグ</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutButtonShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ルームインジケータ/タイムテーブル機能、
お部屋をクリックした際の部屋詳細情報に「外出」「戻る」ボタンを表示し、押すと「外出」「滞在」状態になり部屋の色が変わる
TRUE:該当機能が有効
FALSE:該当機能が無効（デフォルト値）</inlineHelpText>
        <label>外出管理フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDDetailsInputDefaultLines__c</fullName>
        <defaultValue>10</defaultValue>
        <inlineHelpText>プラン設定画面の明細のデフォルト行数 10（デフォルト値）</inlineHelpText>
        <label>プラン明細デフォルト行数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDFPlanBrkIsShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>該当パラメータON設定不可!!!
軽減税率機能有効前提
見積書、会計書、請求書の明細を表示する場合、プラン明細も出力する・しない切替フラグ
TRUE：プラン明細出力表示する
FALSE：プラン明細出力表示しない（デフォルト値）</inlineHelpText>
        <label>RFU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POSNo__c</fullName>
        <defaultValue>&apos;0000&apos;</defaultValue>
        <inlineHelpText>会計オブジェクトのレシートNo.設定方式判別区分
レシートNoは「0000」の場合：自動採番機能にて、レシートNoに反映する
レシートNoは「0000」以外の場合、該当レシートNoがそのまま利用する
レシートNoは「0010」はPOS取込機能で利用済</inlineHelpText>
        <label>POSNo.</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PdfGeneralFlgForAccountDupVer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計書印刷するとき、該当PDFファイルが複数保持する・上書き切り替えフラグ
TRUE:該当PDFファイルが複数保持する
FALSE:該当PDFファイルが上書き（デフォルト値）</inlineHelpText>
        <label>会計書PDF複数保持フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PdfGeneralFlgForAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計書印刷するとき、該当PDFファイルを会計の添付ファイルとして、保存する（最終印刷したPDFのみ保存する）
分割印刷する場合、分割NO単位でPDFファイルを保存する
TRUE：PDFファイルを自動保存する
FALSE：PDFファイルをを自動保存しない（デフォル値）</inlineHelpText>
        <label>会計書PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PdfGeneralFlgForBillDupVer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>請求書印刷するとき、該当PDFファイルが複数保持する・上書き切り替えフラグ
TRUE:該当PDFファイルが複数保持する
FALSE:該当PDFファイルが上書き（デフォルト値）</inlineHelpText>
        <label>請求書PDF複数保持フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PdfGeneralFlgForBill__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>請求書印刷するとき、該当PDFファイルを会計の添付ファイルとして、保存する（最終印刷したPDFのみ保存する） 
分割印刷する場合、分割NO単位でPDFファイルを保存する 
TRUE：PDFファイルを自動保存する 
FALSE：PDFファイルをを自動保存しない（デフォル値）</inlineHelpText>
        <label>請求書PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PersonTMInfoReport__c</fullName>
        <defaultValue>&quot;$当月の個人勤怠情報&quot;</defaultValue>
        <description>レポート名：$当月の個人勤怠情報</description>
        <label>レポート_当月の個人勤怠情報</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanBreakdownMinusFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>プラン詳細マイナス金額入力可否切り替えフラグ
TRUE：入力可能
FALSE:入力不可(デフォルト）</inlineHelpText>
        <label>プラン詳細マイナス金額入力可否フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlanProdCdPrefixNum__c</fullName>
        <defaultValue>5</defaultValue>
        <description>プラン商品コードの番号採番する場合、頭開始の数字</description>
        <inlineHelpText>「未使用」</inlineHelpText>
        <label>プラン商品コード頭数字</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PosDataStayPersonsSyncLeadFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>POS取込で作成された会計データに対して、会計人數は関連のご予約と会計へ連携する、しないフラグ
TRUE：該当会計データの会計人數は関連のご予約、会計の人數は連携する（いずれ変更すると、関連データの人數を一緒に同じ人數で更新する）
FALSE：連携なし（デフォルト値）</inlineHelpText>
        <label>POS人數はご予約人數へ連動フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PosFileKeyDef__c</fullName>
        <defaultValue>&quot;ttotal,ttend,titem&quot;</defaultValue>
        <inlineHelpText>POS取込の対象ファイル(TTOTAL.csv,TTEND.csv,TITEM.csv)はドキュメントにアップロードとき、
ドキュメントの一意の名前情報を設定する(定義の順番は固定ので、注意ください)
書式：TTOTALの一意の名前,TTENDの一意の名前,TITEMの一意の名前
例：ttotal,ttend,titem</inlineHelpText>
        <label>POS取込の対象ファイルの一意の名前</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posreg__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>0: NOP, 1:Jinya, 2:HC</description>
        <inlineHelpText>売上取込処理判別区分：0: NOP, 1:Jinya, 2:HC</inlineHelpText>
        <label>POSレジ</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSearchLayoutKbn__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>予約ポップ等で表示される新規予約画面と予約詳細画面上の見積明細の部分において、
虫眼鏡マークを押すと出てくる検索画面レイアウトを定義する
0:商品検索結果一覧を表示、商品選択形式（デフォルト値）
1:会計画面で仕様しているボタン形式</inlineHelpText>
        <label>会計商品検索レイアウト</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductSearchTypeFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TRUE：商品検索方式は前方一致
FALSE:商品検索方式は部分一致（デフォルト値）</inlineHelpText>
        <label>会計商品の検索方式</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductSortKey__c</fullName>
        <defaultValue>&quot;Field4__c,OP__c, Field3__c&quot;</defaultValue>
        <inlineHelpText>商品入力の際に表示の商品一覧の並び順会計商品項目API値
例：商品コードで昇順表示したい場合: Field3__c asc</inlineHelpText>
        <label>商品表示並び順定義</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseDetailIsShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>仕入入力画面、仕入明細レイアウトを表示する・しない切替フラグ
仕入明細入力レイアウトを表示：TRUE:
仕入明細入力レイアウトを非表示：FALSE:（デフォルト値）</inlineHelpText>
        <label>仕入明細表示・非表示制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PurchaseReport__c</fullName>
        <defaultValue>&quot;$0001 仕入高[調理]&quot;</defaultValue>
        <label>レポート_仕入高[調理]</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QQNRoomAssignFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予約新規の場合、過去予約の部屋割り当てる実績により、部屋を自動割り当てする・しない切替フラグ
TRUE:部屋を自動割り当てする
FALES:部屋を自動割り当てしない（デフォルト値）
注：リクエストバッチでデータ学習後、該当機能が有効の前提</inlineHelpText>
        <label>部屋自動割当機能切替フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuestionnaireMulitiLangFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>アンケート出力のタイミング、指定言語のアンケートを選択出力できる機能の制御フラグ
TRUE：出力したい言語を切替選択できる機能あり
FALSE:出力したい言語を切替選択できる機能なし、ユーザの言語により、対応言語のアンケートを自動出力する（デフォルト値）</inlineHelpText>
        <label>アンケートの出力言語を切替選択できる機能制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RaceRateImportByBasePlanFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ラックレート取込機能、ベースプラン別取り込み機能有効・無効切替フラグ
TRUE：ベースプラン別取り込みできること
FALSE：既存ラックレート取込機能（デフォルト値）</inlineHelpText>
        <label>ラックレート取込(ベースプラン別)機能有効</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RaceRateReport__c</fullName>
        <defaultValue>&quot;$0011 ラックレート設定情報&quot;</defaultValue>
        <label>レポート__ラックレート設定情報レポート名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RackRatePlanConfigFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>CSVファイルをアップロードにより、ラックレート別、ベースプラン別部屋タイプ販売状態を一括設定機能有効・無効切替フラグ
TRUE:ラックレート取込画面からラックレート別、ベースプラン別部屋タイプの販売状態を一括設定機能有効する
FALSE:一括設定機能無効(デフォルト値）</inlineHelpText>
        <label>RFU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RackRateTablePeopleDefault__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>ラックレートの「人数」デフォルト値(1〜10) 
店舗情報側に設定される場合、店舗情報側の設定が優先 
店舗なし　又は　店舗側に未設定場合、該当設定値で使う</inlineHelpText>
        <label>ラックレート人数デフォルト値</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RackRateTableTierDefault__c</fullName>
        <defaultValue>&quot;Tier4&quot;</defaultValue>
        <inlineHelpText>ラックレートの「Tier」デフォルト値(Tier1〜Tier8)
店舗情報側に設定される場合、店舗情報側の設定が優先
店舗なし　又は　店舗側に未設定場合、該当設定値で使う</inlineHelpText>
        <label>ラックレートTierデフォルト値</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecaiusFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>リカイアス機能有効・無効フラグ
TRUE:リカイアス機能有効
FALSE:リカイアス機能無効（デフォルト値）</inlineHelpText>
        <label>リカイアスフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReceiptDtIsShowFlg__c</fullName>
        <defaultValue>&quot;2&quot;</defaultValue>
        <inlineHelpText>入金の場合、該当会計画面に入金方式定義できる
1: 入金日登録する
2: 入金確認のチェックボックス(デフォルト値)</inlineHelpText>
        <label>会計の入金確認登録方式</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReducedTaxPlanDetailCalFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>軽減税率有効の場合、プラン金額計算方法切り替えフラグ
TRUE:プラン明細の単価、消費税、サビース料で金額計算し、明細金額を合計して、プラン金額に設定する
FALSE:プラン明細の単価とプランの消費税とサビース料設定値で計算して、プラン金額に設定する（デフォルト値）</inlineHelpText>
        <label>軽減税率、プラン金額が明細別計算フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReducedTaxProportionMode__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <inlineHelpText>軽減税率機能有効、値引きが存在場合、値引き計算モードを定義する
0:合計金額からの8%10%商品の割合からの値引き(デフォルト値）
1:8%対象商品からの値引き
2:10%対象商品からの値引き</inlineHelpText>
        <label>軽減税率、値引き割合モード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReducedTaxRateFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>該当機能有効により、多税率混在定義可能になる
TRUE：軽減税率機能有効
FALSE：軽減税率機能無効（デフォルト値）</inlineHelpText>
        <label>軽減税率機能有効フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReducedTaxRowIsHideMode__c</fullName>
        <defaultValue>&quot;1,1,1&quot;</defaultValue>
        <inlineHelpText>軽減税率機能有効の場合、合計金額に消費税が０％明細行、値引き関連の明細行及び合計明細行を表示・非表示切り替えフラグ
書式：0(1),0(1),0(1)   →　0：該当明細行目を非表示、1：該当明細行目を表示
1桁目：消費税が０％明細行目表示・非表示制御
2桁目：値引き明細行目表示・非表示制御
3桁名：合計金額行目表示・非表示制御
例：消費税が０％非表示、値引き非表示、合計金額を表示したい場合-&gt; 0,0,1 設定する</inlineHelpText>
        <label>軽減税率、合計明細内容非表示設定フラグ</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenpakuBatchCancelIsCanFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>連泊の予約情報の予約ステータスは「NO SHOW、キャンセルまたは、削除への変更」されると、この予約以後の泊目の予約情報を自動的に同じステータスを設定されるがどうか制御フラグ
TRUE： 一括設定する
FALSE：一括設定しない（デフォルト値）</inlineHelpText>
        <label>連泊予約一括キャンセル機能制御フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenpakuBatchCheckOutIsCanFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>連泊の予約情報をチェックアウトされる場合、前日分全てのご予約分をチェックアウト処理を実施する・しないフラグ
TRUE： 自動でチェックアウトを行う 
FALSE：自動でチェックアウトを行わない（デフォルト値）</inlineHelpText>
        <label>連泊予約一括チェックアウト機能制御フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenpakuBatchCheckinIsCanFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>連泊の予約情報はチェックインされると、この予約以後の泊目の予約情報を自動的にチェックインされるがどうか制御フラグ
TRUE： 自動でチェックインを行う（デフォルト値）
FALSE：自動でチェックインを行わない</inlineHelpText>
        <label>連泊予約一括チェックイン機能制御フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenpakuBatchGoingoutIsCanFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>連泊の予約情報は外出されると、この予約以後の泊目の予約情報を自動的に外出されるがどうか制御フラグ
TRUE： 同時に外出になる
FALSE：該当泊目のみ外出状態になる（デフォルト値）</inlineHelpText>
        <label>連泊予約一括外出機能制御フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportKScheduleCookFieldSortDiv__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>料理項目の商品明細並べ順表示方式制御
1:商品名順で明細を表示する　（Default値)
2:商品コード順で明細を表示する</inlineHelpText>
        <label>予定表料理項目商品並べ順表示方式</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportKScheduleCookInfoCode__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>予定表の料理集計ウインドウに、料理集計種別定義する
コード１：項目　「昼」別で料理集計を行う　　　（Default値）
コード２：項目　「昼と夜」別で料理集計を行う</inlineHelpText>
        <label>予定表料理集計コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportKScheduleCookInfoDiv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>料理集計結果表示方式制御
TRUE:未チェックインの予約の料理とチェックイン済の料理は別々に表示する
FALSE:一箇所に纏めて集計結果を表示する</inlineHelpText>
        <label>予定表料理集計表示方式</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportKScheduleExcelFoodMode__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>予定表のExcel出力機能に、予約の料理情報は出力書式制御
１：ご予約の料理情報は纏めて１セールに出力する（デフォルト値)
２：ご予約の料理情報は一番側に、商品名1,数量1,商品名2,数量2 ... 商品名N,数量N,書式で出力する</inlineHelpText>
        <label>予定表Excel出力の料理情報出力モード</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportKScheduleExcelLineSize__c</fullName>
        <defaultValue>30</defaultValue>
        <inlineHelpText>予定表のExcel出力機能の場合、文字列の折り返し文字数定義
該当文字数を超えると、改行を行う
数字０を入れると、制御なしで処理を行う</inlineHelpText>
        <label>予定表Excel出力の折り返し文字数</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>